kubernetes/system/cilium/cilium-ip-pools.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: gateway-system
