kubernetes/system/cilium/external-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: public-gateway
  namespace: gateway-system
  annotations:
    io.cilium/lb-ip-am-static: "${public_ip}"
spec:
  gatewayClassName: cilium # Requires Gateway API CRDs to be present
  listeners:
    - name: http
      port: 80
      protocol: HTTP
      allowedRoutes:
        namespaces:
          from: All
    - name: https
      port: 443
      protocol: HTTPS
      allowedRoutes:
        namespaces:
          from: All
