kubernetes/system/cilium/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: public-gateway
  namespace: default
  annotations:
    # This tells Cilium to specifically use your public pool
    io.cilium/lb-ip-am-static: "${public_ip}"
spec:
  gatewayClassName: cilium # Requires Gateway API CRDs to be present
  listeners:
    - name: http
      port: 80
      protocol: HTTP
      allowedRoutes:
        namespaces:
          from: All
